--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,5 +1,5 @@
 .Tilt{
-  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%)
+  background: linear-gradient(89deg, #04C8DE 0%, #FF5EDF 100%)
 }
 img {
   padding-top: 5px;
