Changed full site to new colour scheme

--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,5 +1,5 @@
-.Tilt{
-  background: linear-gradient(89deg, #04C8DE 0%, #FF5EDF 100%)
+.Tilt {
+  background: linear-gradient(89deg, #e0e0e0 0%, #474747 100%);
 }
 img {
   padding-top: 5px;
