--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -1,5 +1,5 @@
-.form{
+.form {
   width: 700px;
   background-color: #04c8de;
-  background: linear-gradient(89deg, #04C8DE 0%, #FF5EDF 100%)
+  background: linear-gradient(89deg, #e0e0e0 0%, #474747 100%);
 }
